--- a/DB/實踐成果_社會實踐課程.html
+++ b/DB/實踐成果_社會實踐課程.html
@@ -1,11 +1,12 @@
 <script>
     /* 每頁顯示數量 */
-    const customPaginateOffset = 8;
+    const coursePaginateOffset = 8;
 
     /* 學年度列表 */
     const yearListData = [110, 109, 108, 107];
 
     /**
+      * 前 4 筆會顯示在首頁 "社會實踐課程"
       * year: '學年度'
       * title: '課程名稱',
       * image: '課程縮圖網址',
@@ -16,23 +17,30 @@
         {
             year: 110,
             image: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3370/2.png',
-            title: '110 原民部落社會實踐',
-            date: '2020.07.09',
+            title: '原民部落社會實踐',
+            date: '2020.12.10',
             link: 'https://osausr.ntut.edu.tw/p/426-1001-34.php?Lang=zh-tw',
         },
         {
             year: 110,
-            image: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3370/2.png',
-            title: '110 原民部落社會實踐',
-            date: '2020.07.09',
-            link: 'https://osausr.ntut.edu.tw/p/426-1001-34.php?Lang=zh-tw',
+            image: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/2674659.png',
+            title: '敬請期待｜敬請期待 敬請期待',
+            date: '2020.12.10',
+            link: '#',
         },
         {
             year: 110,
-            image: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3370/2.png',
-            title: '110 原民部落社會實踐',
-            date: '2020.07.09',
-            link: 'https://osausr.ntut.edu.tw/p/426-1001-34.php?Lang=zh-tw',
+            image: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/2674659.png',
+            title: '敬請期待｜敬請期待 敬請期待',
+            date: '2020.12.10',
+            link: '#',
+        },
+        {
+            year: 110,
+            image: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/2674659.png',
+            title: '敬請期待｜敬請期待 敬請期待',
+            date: '2020.12.10',
+            link: '#',
         },
         {
             year: 109,
