--- a/Desktop/實踐成果/培力課程.html
+++ b/Desktop/實踐成果/培力課程.html
@@ -34,7 +34,7 @@
 </div>
 
 <script>
-    const pageItemsNumber = customPaginateOffset || 8;
+    const pageItemsNumber = coursePaginateOffset || 8;
 
     $(function () {
         // 製作學年度選單
