--- a/Desktop/首頁/社會實踐課程.html
+++ b/Desktop/首頁/社會實踐課程.html
@@ -9,11 +9,10 @@
 <div id="courseTemplate" class="d-none">
     <div class="course col-12 col-xl-6 p-30">
         <!-- 課程連結 -->
-        <a class="course-content-link" href="https://osausr.ntut.edu.tw/p/426-1001-34.php?Lang=zh-tw">
+        <a class="course-content-link" target="on_blank">
             <!-- 圖片連結 -->
-            <div class="course-container"
-                style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/2674659.png); background-size:cover;">
-                <img class="triangle-image" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/316146766.png">
+            <div class="course-container">
+                <img class="triangle-image">
                 <div class="course-content-container">
                     <p class="course-content-date"></p>
                     <p class="course-content-title"></p>
