--- a/Desktop/實踐成果/實踐成果複製用模板.html
+++ b/Desktop/實踐成果/實踐成果複製用模板.html
@@ -18,7 +18,7 @@
     </div>
     <!-- 計畫成果 -->
     <div class="project-content-container content-container row">
-        <div class="d-flex flex-column col-12 col-xl-11">
+        <div class="d-flex flex-column col-12 col-xl-11" data-aos="fade-up" data-aos-delay="150">
             <div class="images-container d-flex align-items-end">
             </div>
             <div>
