社會實踐課程 AOS

--- a/Desktop/實踐成果/培力課程(社會實踐課程).html
+++ b/Desktop/實踐成果/培力課程(社會實踐課程).html
@@ -2,11 +2,11 @@
     <div class="container-fluid px-0">
         <p id="coursesTitle" class="w-100 text-center animate__animated animate__jello">社 會 實 踐 課 程</p>
         <img id="img_plant" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/107723121.png" alt="星球"
-            data-aos="zoom-in">
+            data-aos="zoom-in" data-aos-delay="150" data-aos-duration="500">
         <img id="img_star_big" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/840449648.png" alt="星星"
-            data-aos="zoom-in">
+            data-aos="zoom-in" data-aos-delay="150" data-aos-duration="500">
         <img id="img_star_small" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/194586544.png" alt="星星"
-            data-aos="zoom-in">
+            data-aos="zoom-in" data-aos-delay="150" data-aos-duration="500">
         <div id="yearMenu" class="row justify-content-center">
             <div class="col-md-10 year-border">
                 <div id="yearListContainer" class="row justify-content-center"></div>
