--- a/Desktop/首頁/首頁背景.html
+++ b/Desktop/首頁/首頁背景.html
@@ -1,13 +1,13 @@
 <div class="">
     <img class="Background" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/806604180.png">
     <div class="Background-img">
-        <img class="img3_2" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/3-2.png" alt="星球"
+        <img class="plant_1" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/3-2.png" alt="星球"
             data-aos="zoom-in" data-aos-delay="150" data-aos-duration="500">
 
-        <img class="star2_work_1" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/336237509.png" alt="星球"
+        <img class="plant_2" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/336237509.png" alt="星球"
             data-aos="fade-right" data-aos-delay="150" data-aos-duration="500">
 
-        <img class="star" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/837724093.png" alt="星球"
+        <img class="star" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/837724093.png" alt="星星"
             data-aos="zoom-in" data-aos-delay="150" data-aos-duration="500">
 
         <img class="star_1" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/851095284.png" alt="星星"
@@ -48,14 +48,14 @@
         position: relative;
     }
 
-    .img3_2 {
+    .plant_1 {
         position: absolute;
         top: 1317px;
         left: 1160px;
         z-index: 1;
     }
 
-    .star2_work_1 {
+    .plant_2 {
         position: absolute;
         top: 1900px;
         left: -130px;
