--- a/Desktop/公告/公告列表.html
+++ b/Desktop/公告/公告列表.html
@@ -1,18 +1,47 @@
-<div class=wrapper>
+<div class="wrapper" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="300" data-aos-duration="500">
     <div class="row">
-        <h1 class="announcement-list-title w-100 text-center">最 新 公 告</h1>
+        <h1 class="announcement-list-title w-100 text-center m-0">最 新 公 告</h1>
     </div>
     <div class="row justify-content-center">
         <hr class="announcement-hr">
     </div>
-    <div id="pageptlistWrapper" class="row justify-content-center"></div>
+    <div id="pageptlistWrapper" class="row justify-content-center">
+        <div id="announcementListContainer"></div>
+    </div>
+    <div id="announcementPaginate" class="d-flex justify-content-center mt-5"></div>
+</div>
+<div id="template" class="d-none">
+    <div class="paginate">
+        <span></span>
+    </div>
 </div>
 <style>
+    .mtitle i {
+        white-space: nowrap;
+        padding: 12px 1em;
+    }
+
+    .mtitle:hover:after {
+        position: absolute;
+        content: "";
+        width: 0;
+        height: 0;
+        border-width: 7px;
+        border-style: solid;
+        border-color: transparent transparent transparent #99051F;
+        left: 0;
+        top: 18px;
+    }
+
+    #pageptlistWrapper {
+        max-height: 600px;
+    }
+
     .announcement-list-title {
         padding-top: 153px;
         white-space: nowrap;
         font-family: 'SegoeUI';
-        font-size: 40px;
+        font-size: 40px !important;
         font-weight: bold;
         line-height: 1.33;
         letter-spacing: normal;
@@ -22,7 +51,7 @@
     .announcement-hr {
         margin: 50px 0;
         border: solid 1px #adadad;
-        width: 1169.7px;
+        width: 70%;
         max-width: 80vw;
     }
 
@@ -33,7 +62,12 @@
 
     #pageptlist {
         padding: 0 50px;
-        width: 1220px;
+        margin-bottom: 200px;
+    }
+
+    #announcementListContainer {
+        width: 100%;
+        padding: 0 15%;
         margin-bottom: 200px;
     }
 
@@ -47,11 +81,67 @@
         padding: 8px 0 !important;
         border-bottom: 1px solid #d3d3d3;
     }
+
+    #announcementPaginate {
+        margin-bottom: 90px;
+    }
+
+    .paginate {
+        width: 40px;
+        height: 40px;
+        font-size: 20px;
+        color: '#4998b2';
+        margin: 0 16px 0 0;
+        border: solid 1px #ebebeb;
+        background-color: #ffffff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .paginate:hover {
+        color: #ffffff;
+        background-color: rgba(73, 152, 178, 0.56);
+    }
+
+    .paginate-activate {
+        color: #ffffff;
+        background-color: rgba(73, 152, 178, 0.56);
+    }
 </style>
 <script>
+    const pageItemsNumber = 7;
+
     $(function () {
-        const pageptlist = $('#pageptlist').clone();
-        $('#pageptlist').remove()
-        $('#pageptlistWrapper').append(pageptlist);
+        $('#pageptlist').hide();
+        $('.listBS').addClass('original');
+        generateTable({
+            data: {
+                page: 0,
+            }
+        });
     });
+
+    function generateTable(e) {
+        const data = e.data;
+        if (!$('.original').length) { return }
+        $('#announcementListContainer').html('');
+        for (let i = data.page * pageItemsNumber; i < Math.min($('.original').length, data.page * pageItemsNumber + pageItemsNumber); i++) {
+            const announcement = $($('.original')[i]).clone().removeClass('original');
+            $('#announcementListContainer').append(announcement);
+        }
+        generatePaginate(data.page);
+    }
+
+    function generatePaginate(currentPage) {
+        $('#announcementPaginate').html('');
+        for (let i = 0; i < Math.ceil($('.original').length / pageItemsNumber); i++) {
+            const paginate = $('#template').find('.paginate').clone();
+            paginate.find('span').text(i + 1);
+            i === currentPage ? paginate.addClass('paginate-activate') : null;
+            paginate.bind('click', { page: i }, generateTable);
+            $('#announcementPaginate').append(paginate);
+        }
+    }
 </script>
