--- a/Desktop/首頁/近期活動.html
+++ b/Desktop/首頁/近期活動.html
@@ -1,4 +1,4 @@
-<div class="container-fluid my-5" style="position: relative;">
+<div class="container-fluid" style="position: relative;">
     <h1 id="latestActivityTitle" class="w-100 text-center animate__animated animate__jello">近 期 活 動</h1>
     <div id="activityContainer" class="justify-content-center row"></div>
     <a id="latestActivityMore" class="text-decoration-none"
@@ -31,6 +31,7 @@
         color: #000;
         right: 5%;
         bottom: inherit;
+        z-index: 1;
     }
 
     @media (min-width: 767px) {
