--- a/Desktop/公告/公告列表.html
+++ b/Desktop/公告/公告列表.html
@@ -10,7 +10,7 @@
     <div id="pageptlistWrapper" class="row justify-content-center">
         <div id="announcementListContainer"></div>
     </div>
-    <div id="announcementPaginate" class="d-flex justify-content-center mt-5"></div>
+    <div id="announcementPaginate" class="d-flex justify-content-center"></div>
 </section>
 <div id="template" class="d-none">
     <div class="paginate">
@@ -69,8 +69,8 @@
         max-width: 80vw;
     }
 
-    #pageptlistWrapper {
-        max-height: 600px;
+    #announcementPaginate {
+        margin-top: 50px;
     }
 
     #pageptlist {
@@ -81,14 +81,13 @@
     #announcementListContainer {
         width: 100%;
         padding: 0 15%;
-        margin-bottom: 200px;
     }
 
     .paginate {
         width: 40px;
         height: 40px;
         font-size: 20px;
-        color: '#4998b2';
+        color: #4998b2;
         margin: 0 16px 0 0;
         border: solid 1px #ebebeb;
         background-color: #ffffff;
@@ -96,6 +95,7 @@
         justify-content: center;
         align-items: center;
         cursor: pointer;
+        z-index: 100;
     }
 
     .paginate:hover {
