--- a/Desktop/公告/模板B.html
+++ b/Desktop/公告/模板B.html
@@ -5,52 +5,60 @@
     </div>
     <hr />
     <!-- 這裡為活動簡介 -->
-    <div class="row mt-118">
+    <div class="row" style="margin-top: 10rem;">
         <!-- 活動簡介區塊 -->
-        <div class="col-2 p-2 pr-5 bd-highlight border-right">
+        <div class="col-4 col-md-2 p-2 pr-5 bd-highlight border-right">
             <h1 class="text-right text-secondary announcement-sub-title">活動簡介</h1>
         </div>
-        <div class="col p-2 pl-5 bd-highlight">
-            <h1 class="mb-3"><b>木育趨勢分享、 經典木玩具體驗、 木童玩創作</b></h1>
-            <h2 class="text-secondary">
-                源自日本的「木文化教育」，已經是日本在正式教科書外的延伸性教育主題，目前台灣幼兒園學習區強調的積木區、組合建構區和特別區的木工區、童玩區等，都和「木育」有著很大的相關聯性。「木育」是關於木材相關的教育活動，台灣擁有豐沛的山林資源，透過木材的知識教育，希望讓民眾認識生活中，充滿各種有關的木頭產品和玩具，講座規劃了讓民眾從認識木育、體驗木育、到創作木育的不同階段分享，傳遞感受天然木質的美好，以寓教於樂方式，希望傳遞永續森林與環境保育的理念。
-            </h2>
+        <div class="col-8 col-md-10 p-2 pl-5 bd-highlight">
+            <h2 class="announcement-content-title">木育趨勢分享、 經典木玩具體驗、 木童玩創作</h2>
+            <p class="text-secondary announcement-content">
+                源自日本的「木文化教育」，已經是日本在正式教科書外的延伸性教育主題，目前台灣幼兒園學習
+                區強調的積木區、組合建構區和特別區的木工區、童玩區等，都和「木育」有著很大的相關聯性。
+                「木育」是關於木材相關的教育活動，台灣擁有豐沛的山林資源，透過木材的知識教育，希望讓民
+                眾認識生活中，充滿各種有關的木頭產品和玩具，講座規劃了讓民眾從認識木育、體驗木育、到
+                創作木育的不同階段分享，傳遞感受天然木質的美好，以寓教於樂方式，希望傳遞永續森林與環
+                境保育的理念。
+            </p>
         </div>
     </div>
     <!-- 這裡為講師資訊 -->
-    <div class="row mt-154">
+    <div class="row" style="margin-top: 10rem;">
         <!-- 講師資訊區塊 -->
-        <div class="col-2 p-2 pr-5 bd-highlight border-right">
+        <div class="col-4 col-md-2 p-2 pr-5 bd-highlight border-right">
             <h1 class="text-right text-secondary announcement-sub-title">講師資訊</h1>
         </div>
-        <div class="col p-2 pl-5 bd-highlight">
-            <h1 class="mb-3"><b>蔡宗翰 講師</b></h1>
-            <h2 class="text-secondary">美國舊金山藝術大學</h2>
-            <h2 class="text-secondary">工業設計/玩具設計 碩士</h2>
-            <br>
-            <h2 class="text-secondary">美國繪兒樂 教育專案顧問</h2>
-            <h2 class="text-secondary">台灣區玩具暨孕嬰童用品工業同業公會 - 副秘書長</h2>
-            <h2 class="text-secondary">永豐餘信誼基金會 - 玩具部設計主任</h2>
-            <h2 class="text-secondary">親子天下雜誌 STEAM教育專題 - 總顧問</h2>
+        <div class="col-8 col-md-10 p-2 pl-5 bd-highlight">
+            <h2 class="announcement-content-title">蔡宗翰 講師</h2>
+            <p class="text-secondary announcement-content">
+                美國舊金山藝術大學
+                工業設計/玩具設計 碩士
+            </p>
+            <p class="text-secondary announcement-content">
+                美國繪兒樂 教育專案顧問
+                台灣區玩具暨孕嬰童用品工業同業公會 - 副秘書長
+                永豐餘信誼基金會 - 玩具部設計主任
+                親子天下雜誌 STEAM教育專題 - 總顧問
+            </p>
         </div>
     </div>
     <!-- 這裡為活動資訊 -->
-    <div class="row mt-154">
+    <div class="row" style="margin-top: 10rem;">
         <!-- 活動資訊區塊 -->
-        <div class="col-2 p-2 pr-5 bd-highlight border-right">
+        <div class="col-4 col-md-2 p-2 pr-5 bd-highlight border-right">
             <h1 class="text-right text-secondary announcement-sub-title">活動資訊</h1>
         </div>
-        <div class="col p-2 pl-5 bd-highlight">
-            <h2 class="text-secondary">活動日期：2020/08/01 (六)</h2>
-            <h2 class="text-secondary">活動時間：上午 09:00-12:00</h2>
-            <h2 class="text-secondary">活動地點：豐園北科大木創中心(台中市豐原區豐勢路一段551號)</h2>
-            <h2 class="text-secondary">指導單位：國立臺北科技大學 教務處</h2>
-            <h2 class="text-secondary">執行單位：社團法人陪您育兒教練協會</h2>
-            <h2 class="text-secondary">協辦單位：豐園北科大木創中心、PlayMe</h2>
-            <h2 class="text-secondary">活動聯絡窗口：babycoaching.tw@gmail.com 陳小姐</h2>
+        <div class="col-8 col-md-10 col-lg-5 p-2 pl-5 bd-highlight">
+            <div id="announcementInfo">
+                <p class="text-secondary announcement-content">展覽：【繽紛客家‧食尚關西】</p>
+                <p class="text-secondary announcement-content">USR成果展 展期：2019/11/20（三）～12/06（三）</p>
+                <p class="text-secondary announcement-content">地點：臺北科技大學 人文實驗室（四教104）</p>
+                <p class="text-secondary announcement-content">聯絡：（02）27712171*3071陳小姐</p>
+            </div>
         </div>
     </div>
 </div>
+
 <style type="text/css">
     /* 隱藏內建標題  */
     .mpgtitle {
@@ -68,6 +76,12 @@
         margin-top: 5vh;
     }
 
+    .breadcrumb {
+        height: 0 !important;
+        padding: 0 !important;
+        margin: 0 !important;
+    }
+
     .PtStatistic {
         margin: 50px;
     }
@@ -77,30 +91,53 @@
         margin-top: 120px;
     }
 
-    .announcement-sub-title {
-        letter-spacing: 5px;
+    .post-title {
+        margin-top: 50px !important;
+        font-size: 38px !important;
+        color: #000000;
+    }
+
+    @media (min-width: 767px) {
+        .post-title {
+            margin-top: 118px !important;
+        }
     }
 
     hr {
         border-top: 2px solid rgba(0, 0, 0, .1);
     }
 
+    .announcement-sub-title {
+        font-size: 30px !important;
+        line-height: 1.33 !important;
+        letter-spacing: normal !important;
+    }
+
+    .announcement-content-title {
+        color: #000 !important;
+        font-size: 25px !important;
+        font-weight: bold !important;
+        margin: 22px 0 7px !important;
+    }
+
+    .announcement-content {
+        margin: 0 !important;
+        font-size: 25px !important;
+        font-weight: normal !important;
+        line-height: 1.32 !important;
+        letter-spacing: normal !important;
+    }
+
+    #announcementInfo>.announcement-content {
+        line-height: 1.6 !important;
+        letter-spacing: normal !important;
+    }
+
     .text-secondary {
-        line-height: 1.5;
-        color: #6c757d !important;
+        color: #707070 !important;
     }
 
-    .post-title {
-        margin-top: 118px;
-        font-size: 38px;
-        color: #000000;
-    }
-
-    .mt-118 {
-        margin-top: 118px;
-    }
-
-    .mt-154 {
-        margin-top: 154px;
+    .border-right {
+        border-right: 1px solid #3d3d3d !important;
     }
 </style>
